# to-do-app

./: Makefile  README.md  TODO.md
backend/: .env  Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  routes.py
backend/app/config/: config.py
backend/app/controllers/: todolist_controller.py  user_controller.py
backend/app/models/: models.py
backend/app/routes/: routes.py
backend/tests/: test_e2e.py
docs/: documentation.postman_collection.json
frontend/: .env.development  .env.production  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  next.config.js  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/components/: caracter-count-input.js  notification.js
frontend/src/contexts/: auth-context.js
frontend/src/guards/: auth-guard.js
frontend/src/hooks/: use-activate-product-by-id.js  use-activate-todo-by-id.js  use-auth-user-information.js  use-auth.js  use-create-product-by-companyid.js  use-create-todo.js  use-delete-product-by-id.js  use-delete-todo-by-id.js  use-fetch-products-by-companyid.js  use-fetch-todo.js  use-inactivate-product-by-id.js  use-inactivate-todo-by-id.js  use-selection.js  use-update-product-by-id.js  use-update-todo-by-id.js
frontend/src/layouts/auth/: layout.js
frontend/src/layouts/dashboard/: account-popover.js  config.js  side-nav.js  top-nav.js
frontend/src/pages/: 404.js  _app.js  _document.js  index.js
frontend/src/theme/: colors.js
frontend/src/utils/: apply-pagination.js
(+6 files in other folders)
