[tool.poetry]
name = "backend-todo-list"
version = "0.1.0"
description = ""
authors = ["William Villani Stiehler <william.stiehler@evoluinfo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
